[project]
name = "ai-proxy"
version = "0.1.0"
description = "Simple GPT proxy query server."
authors = [
    {name = "jonas", email = ""},
]
dependencies = [
    "fastapi>=0.111.0",
    "loguru>=0.7.2",
    "openai>=1.35.3",
    "pydantic-settings>=2.3.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "fastapi dev src/ai_proxy/app.py"